[package]
name = "fhe-threshold"
description = "Threshold FHE extension to fhe.rs"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
fhe = { version = "^0.1.0-beta.5", path = "../fhe" }
fhe-math = { version = "^0.1.0-beta.5", path = "../fhe-math" }

rand.workspace = true
thiserror.workspace = true
zeroize.workspace = true
